@@ -1,8 +1,8 @@
 from django.contrib import admin
 
 # from models import PasswordReset
-# 
+#
 # class PasswordResetAdmin(admin.ModelAdmin):
 #     list_display = ["user", "temp_key", "timestamp", "reset"]
-# 
+#
 # admin.site.register(PasswordReset, PasswordResetAdmin)
