@@ -14,7 +14,12 @@ EMAIL_AUTHENTICATION = getattr(settings, "ACCOUNT_EMAIL_AUTHENTICATION", False)
 UNIQUE_EMAIL = getattr(settings, "ACCOUNT_UNIQUE_EMAIL", True)
 
 # Signup password verification
-SIGNUP_PASSWORD_VERIFICATION = getattr(settings, "ACCOUNT_SIGNUP_PASSWORD_VERIFICATION", True)
+SIGNUP_PASSWORD_VERIFICATION = getattr(settings, 
+                                       "ACCOUNT_SIGNUP_PASSWORD_VERIFICATION", 
+                                       True)
+
+# Minimum Password Length
+PASSWORD_MIN_LENGTH = getattr(settings, "ACCOUNT_PASSWORD_MIN_LENGTH", 7)
 
 # Subject-line prefix to use for email messages sent
 EMAIL_SUBJECT_PREFIX = getattr(settings, "ACCOUNT_EMAIL_SUBJECT_PREFIX", None)
@@ -26,9 +31,10 @@ SIGNUP_FORM_CLASS = getattr(settings, "ACCOUNT_SIGNUP_FORM_CLASS", None)
 USERNAME_REQUIRED = getattr(settings, "ACCOUNT_USERNAME_REQUIRED", True)
 
 # render_value parameter as passed to PasswordInput fields
-PASSWORD_INPUT_RENDER_VALUE = getattr(settings, "ACCOUNT_PASSWORD_INPUT_RENDER_VALUE", False)
+PASSWORD_INPUT_RENDER_VALUE = getattr(settings, 
+                                      "ACCOUNT_PASSWORD_INPUT_RENDER_VALUE", 
+                                      False)
 
 assert (not EMAIL_AUTHENTICATION) or EMAIL_REQUIRED
 assert (not EMAIL_AUTHENTICATION) or UNIQUE_EMAIL
 assert (not EMAIL_VERIFICATION) or EMAIL_REQUIRED
-
